# routerui

./: .gitignore  TESTING.md  install-mock.sh  install.sh  setup-vm.sh
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: main.rs  mock.rs
backend/src/api/: addons.rs  adguard.rs  antivirus.rs  auth.rs  dashboard.rs  docker.rs  firewall.rs  media.rs  mod.rs  network.rs  protection.rs  security.rs  services.rs  setup.rs  system.rs  tools.rs  users.rs  vpn.rs
backend/src/auth/: mod.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs
backend/src/system/: mod.rs
blocklists/: emerging-threats.txt  spamhaus-drop.txt  state.json
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
frontend/.svelte-kit/output/server/: manifest-full.js
frontend/.svelte-kit/types/: route_meta_data.json
frontend/src/: app.css  app.html
frontend/src/lib/components/: Gauge.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/addons/: +page.svelte
frontend/src/routes/adguard/: +page.svelte
frontend/src/routes/antivirus/: +page.svelte
frontend/src/routes/docker/: +page.svelte
frontend/src/routes/firewall/: +page.svelte
frontend/src/routes/media/: +page.svelte
frontend/src/routes/network/: +page.svelte
frontend/src/routes/protection/: +page.svelte
frontend/src/routes/security/: +page.svelte
frontend/src/routes/services/: +page.svelte
frontend/src/routes/setup/: +layout.svelte  +page.svelte
frontend/src/routes/system/: +page.svelte
(+96 files in other folders)
